package use_case.compare_currencies;

public interface CompareCurrenciesInputBoundary {
    void execute(CompareCurrenciesInputData inputData);
}
