@startuml
skinparam packageStyle rectangle

' ===========================
'       UI LAYER
' ===========================
package view {
    class ConvertView
}

' ===========================
'   INTERFACE ADAPTER LAYER
' ===========================
package interface_adapter.compare_currencies {
    class CompareCurrenciesController
    class CompareCurrenciesPresenter
}

package interface_adapter.convert_currency {
    class ConvertViewModel
    class ConvertState
}

' ===========================
'        USE CASE LAYER
' ===========================
package "use_case.compare_currencies" {
    interface CompareCurrenciesInputBoundary
    interface CompareCurrenciesOutputBoundary

    class CompareCurrenciesInteractor
    class CompareCurrenciesInputData
    class CompareCurrenciesOutputData
}

' ===========================
'        ENTITY / DAO LAYER
' ===========================
package entity {
    class Currency
    class CurrencyConversion
}

package use_case.convert {
    interface ExchangeRateDataAccessInterface
    class CurrencyRepository
}

' ===========================
'       UI → ADAPTER
' ===========================
ConvertView --> CompareCurrenciesController
ConvertView --> ConvertViewModel

' ===========================
'    CONTROLLER → USE CASE
' ===========================
CompareCurrenciesController --> CompareCurrenciesInputBoundary

' ===========================
'      USE CASE DETAILS
' ===========================
CompareCurrenciesInteractor ..|> CompareCurrenciesInputBoundary
CompareCurrenciesInteractor --> CompareCurrenciesOutputBoundary
CompareCurrenciesInteractor --> CompareCurrenciesInputData
CompareCurrenciesInteractor --> CompareCurrenciesOutputData
CompareCurrenciesInteractor --> ExchangeRateDataAccessInterface
CompareCurrenciesInteractor --> CurrencyRepository
CompareCurrenciesInteractor --> Currency
CompareCurrenciesInteractor --> CurrencyConversion

' ===========================
'  PRESENTER → VIEWMODEL
' ===========================
CompareCurrenciesPresenter ..|> CompareCurrenciesOutputBoundary
CompareCurrenciesPresenter --> ConvertViewModel
CompareCurrenciesPresenter --> ConvertState

@enduml
